# ebee

./: CMakeLists.txt
ctoir/: .gdb_history  a.out  addobf.cpp  antidis.cpp  chall  chall.cpp  chall.ll  crc32.ll  flatten.cpp  instrs.txt  t1.bc  t1.c  t1.ll  t2.bc  t2.c  t2.ll  t3.bc  t3.c  t3.ll  test  test.bc  test.ll  test.s
ebpf/: prog.c
include/: challenge.h  compress.h  executor.h  instructions.h  utils.h
src/: challenge.cc  executor.cc  instructions.cc  main.cc  utils.cc
tests/: compress.cc  executor.cc  utils.cc
